[package]
name = "hyperion"
version = "0.1.0"
description = "on-chain wallet directory"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyperion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
